# ikeagoods

./: .gitignore  README.rst  pyproject.toml
ikeagoods/scrapyparser/: .~lock.output.csv#  scrapy.cfg
ikeagoods/scrapyparser/scrapyparser/: items.py  middlewares.py  pipelines.py  settings.py
ikeagoods/scrapyparser/scrapyparser/spiders/: goods.py
tests/: test_ikeagoods.py
